[metadata]
name = pesummary
author = Charlie Hoy
author_email = charlie.hoy@ligo.org
description = Python package to produce summary pages for Parameter estimation codes
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE.md
url = https://lscsoft.docs.ligo.org/pesummary
download_url = https://lscsoft.docs.ligo.org/pesummary/stable_docs/installation.html
project_urls =
        Documentation = https://lscsoft.docs.ligo.org/pesummary/
        Issue Tracker = https://git.ligo.org/lscsoft/pesummary/-/issues/
        Source Code = https://git.ligo.org/lscsoft/pesummary.git
classifiers =
        License :: OSI Approved :: MIT License
        Natural Language :: English
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9

[options]
python_requires = >=3.8
packages =
        pesummary
        pesummary.core
        pesummary.core.webpage
        pesummary.core.plots
        pesummary.core.plots.seaborn
        pesummary.core.file
        pesummary.core.file.formats
        pesummary.core.notebook
        pesummary.gw
        pesummary.gw.conversions
        pesummary.gw.notebook
        pesummary.gw.file
        pesummary.gw.file.formats
        pesummary.gw.plots
        pesummary.gw.webpage
        pesummary.utils
        pesummary.conf
        pesummary.cli
        pesummary.io
        pesummary.tests
install_requires =
        astropy>=3.2.3
        corner
        deepdish
        gwpy >=2.1.2
        h5py
        lalsuite >=7.0.0
        ligo-gracedb
        matplotlib
        numpy >=1.15.4
        pandas
        pygments
        plotly
        pillow
        seaborn >=0.11.0
        statsmodels
        scipy >=1.8.0
        tables
        tqdm >=4.44.0
include_package_data = true

[options.entry_points]
console_scripts =
        summaryclassification = pesummary.cli.summaryclassification:main
        summaryclean = pesummary.cli.summaryclean:main
        summarycombine = pesummary.cli.summarycombine:main
        summarycombine_posteriors = pesummary.cli.summarycombine_posteriors:main
        summarycompare = pesummary.cli.summarycompare:main
        summarydetchar = pesummary.cli.summarydetchar:main
        summaryextract = pesummary.cli.summaryextract:main
        summarygracedb = pesummary.cli.summarygracedb:main
        summaryjscompare = pesummary.cli.summaryjscompare:main
        summarymodify = pesummary.cli.summarymodify:main
        summarypages = pesummary.cli.summarypages:main
        summarypageslw = pesummary.cli.summarypageslw:main
        summarypipe = pesummary.cli.summarypipe:main
        summaryplots = pesummary.cli.summaryplots:main
        summarypublication = pesummary.cli.summarypublication:main
        summaryrecreate = pesummary.cli.summaryrecreate:main
        summaryreview = pesummary.cli.summaryreview:main
        summarysplit = pesummary.cli.summarysplit:main
        summarytest = pesummary.cli.summarytest:main
        summarytgr = pesummary.cli.summarytgr:main
        summaryversion = pesummary.cli.summaryversion:main

[options.extras_require]
docs =
        ipykernel
        nbsphinx
        requests
        Sphinx >=1.2.2
        sphinx-argparse
        sphinx_rtd_theme
        sphinx-panels
        sphinxcontrib-programoutput
lint =
        flake8 >=3.7.0
        flake8-bandit
test =
        astropy >=3.2.3,!=4.3.0
        beautifulsoup4
        bilby_pipe
        coverage
        coverage-badge
        cython >=0.28.5
        markupsafe ==2.0.1
        pycbc
        pytest >=3.0.0
        pytest-xdist
        pytest-rerunfailures
        pytest-cov
        requests
        testfixtures
extras =
        bilby>=1.1.1
        coloredlogs
        GitPython
        gwosc
        jupyter_client
        ligo.em-bright >=0.1.2
        ligo.skymap
        nbformat
        pepredicates >=0.0.3

[flake8]
ignore = 
        E402,
        W503,
        E731,
        F401,
        F841,
        E741,
        F403,
        W605,
        F522
exclude =
        pesummary/tests/*,
        docs/*,
        build/*,
        *__init__.py
max-line-length = 120

[versioneer]
VCS = git
style = pep440
versionfile_source = pesummary/_version.py
versionfile_build = pesummary/_version.py
tag_prefix = v
parentdir_prefix = pesummary-
